Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBooleanNumberField.quorum
class Main
    boolean v = Test()
    action Main
    end

    action Test() returns boolean
        number var = 5.0
        return var
    end
end